# reachable

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
examples/: demo.py
src/reachable/: __init__.py  advisories.py  api.py  callgraph.py  cli.py  dependencies.py  explain.py  mcp_server.py  reachability.py  report.py  sarif.py  scan.py  vex.py
src/reachable/providers/: base.py  fake.py  grok_provider.py  openai_provider.py
tests/: conftest.py  test_advisories.py  test_api.py  test_callgraph.py  test_cli.py  test_dependencies.py  test_explain.py  test_reachability.py  test_report.py  test_sarif.py  test_scan.py  test_vex.py
tests/fixtures/advisories/: dangerlib.json  dynamiclib.json  neverimported.json  unusedlib.json
tests/fixtures/sample_app/: pyproject.toml  requirements.txt
tests/fixtures/sample_app/sample_app/: __init__.py  direct.py  dynamic.py  main.py  unused_import.py
