[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reachable"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "pydantic>=2.6",
  "typer>=0.12",
]

[project.scripts]
reachable = "reachable.cli:app"

[project.optional-dependencies]
llm = ["openai>=1.40"]
mcp = ["mcp>=1.2"]
dev = ["pytest>=8.0", "httpx>=0.27", "ruff>=0.4"]

[tool.hatch.build.targets.wheel]
packages = ["src/reachable"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 90
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["typer.Option"]
